devel/ultimatepp/files/logs
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm: In function '-[CocoView keyDown:]':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:481:39: error: 'static bool Upp::Ctrl::DispatchKey(Upp::dword, int)' is private within this context
  481 |                                 ctrl->DispatchKey(ch, 1);
      |                                       ^~~~~~~~~~~
In file included from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoMM.h:131,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:1:
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CtrlCore.h:660:23: note: declared private here
  660 |         static  bool  DispatchKey(dword keycode, int count);
      |                       ^~~~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:481:50: error: 'static bool Upp::Ctrl::DispatchKey(Upp::dword, int)' is private within this context
  481 |                                 ctrl->DispatchKey(ch, 1);
      |                                 ~~~~~~~~~~~~~~~~~^~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CtrlCore.h:660:23: note: declared private here
  660 |         static  bool  DispatchKey(dword keycode, int count);
      |                       ^~~~~~~~~~~
ide: 1 file(s) built in (0:00.04), 44 msecs / file
CtrlCore: 2 file(s) built in (0:15.51), 7759 msecs / file

There were errors. (0:17.91)
